--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <form id="formulario">
         <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre">
+        <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required>
 
         <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" placeholder="Escribe tu correo">
+        <input type="email" id="email" name="email" placeholder="Escribe tu correo" required>
 
         <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" placeholder="Escribe tu contraseña">
+        <input type="password" id="password" name="password" placeholder="Escribe tu contraseña" required minlength="8">
 
         <label>Género:</label>
         <div class="gender-options">
@@ -36,7 +36,7 @@
             <option value="Otro">Otro</option>
         </select>
 
-        <button type="button" id="btnEnviar"">Enviar</button>
+        <button type="submit" id="btnEnviar"">Enviar</button>
     </form>
     <script src="js/app.js"></script>
 </body>
